# dt-basic-rust-actix-explore

./: .gitignore  docker-compose.yaml
dt-actix-application-builder/: Cargo.toml
dt-actix-hello-actix/: Cargo.toml
dt_actix_api/: Cargo.toml
dt_actix_api/config/: development.toml  production.toml
dt_actix_api/migrations/: 20240401054004_initial_setup.down.sql  20240401055222_create_users.up.sql  20240401055643_create_followers.up.sql  20240401055926_create_articles.down.sql  20240401055926_create_articles.up.sql  20240401063459_create_comments.up.sql  20240401063615_create_article_tags.up.sql
dt_actix_api/src/: errors.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs
dt_actix_api/src/routes/: articles.rs  comments.rs  mod.rs  ping.rs  profile.rs  tags.rs  users.rs
dt_actix_api/src/schemas/: article_comment_schema.rs  article_schema.rs  article_tag_schema.rs  mod.rs  profile_schema.rs  users_schema.rs
dt_actix_api/tests/: ping.rs
dt_actix_api/tests/api/: articles.rs  main.rs  ping.rs  profile.rs  test_utils.rs  users.rs
dt_actix_application_builder/: Cargo.toml
dt_actix_database/: .env  Cargo.toml
dt_actix_database/src/: main.rs  (+1 more)
dt_actix_error_handler/: Cargo.toml
dt_actix_extractor/: Cargo.toml
dt_actix_handler/: Cargo.toml
dt_actix_http2/: Cargo.toml
dt_actix_http_server/: Cargo.toml  cert.pem  key.pem
dt_actix_integration_testing/: Cargo.toml
dt_actix_middleware/: Cargo.toml
dt_actix_request/: Cargo.toml  output.txt
dt_actix_request/src/: main.rs
dt_actix_response/: Cargo.toml
dt_actix_static_files/: Cargo.toml  index.html
(+26 files in other folders)
