[package]
name = "dt_actix_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bytes = "1.6.0"
flate2 = "1.0.28"
futures = "0.3.30"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
